[package]
name = "hero-api"
version = "0.1.0"
authors = ["BrunoVieira319 <brunovieira310@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
serde = "1.0.102"
serde_json = "1.0.41"
serde_derive = "1.0.41"
diesel = { version = "1.0.0", features = ["mysql"] }
dotenv = "0.9.0"
r2d2 = "*"
r2d2-diesel = "*"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]